# Blue_Harvest

./: BLUE HARVEST  README.md  airflow.cfg  airflow.db  mapping_apis.json  pyproject.toml  requirements.txt
Functions/: connections.py  data.py
dags/: pipeline.py
data/: characters_comics.csv
src/: characters_comics.csv  main.py
